[package]
name = "sorting-vec"
version = "0.1.1"
authors = ["naomijub <julia.boeira@creditas.com>"]
description = "Sorts a vector using a btreemap"
readme = "README.md"
documentation = "https://docs.rs/sorting-vec/"
repository = "https://github.com/naomijub/sorting-vec"
keywords = ["vector", "vec", "sort", "order", "btree" ]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
